[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameHUDRelated/BuySellPanel/TowerBuyCard.gd" type="Script" id=1]
[ext_resource path="res://GameHUDRelated/BuySellPanel/BuyAndInfoTowerBackground.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/BuySellPanel/CombineInfoSymbol.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/BuySellPanel/GraySymbol.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/BuySellPanel/CombinationMetadataOnCards/ShineSparkle/ShineSparkle.png" type="Texture" id=5]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://GameHUDRelated/BuySellPanel/Tier02_Crown.png" type="Texture" id=7]
[ext_resource path="res://GameHUDRelated/BuySellPanel/CombinationMetadataOnCards/ShinyBorder.png" type="Texture" id=8]
[ext_resource path="res://GameHUDRelated/BuySellPanel/GoldPic_NoSpacing.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 6 )

[node name="BuyCardContainer" type="MarginContainer"]
margin_right = 104.0
margin_bottom = 75.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="BuyCard" type="TextureButton" parent="."]
margin_right = 104.0
margin_bottom = 75.0
focus_mode = 0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 104.0
margin_bottom = 75.0
mouse_filter = 2

[node name="ShinyBorder" type="TextureRect" parent="Control"]
margin_top = 11.0
margin_right = 104.0
margin_bottom = 75.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 104.0
margin_bottom = 75.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_right = 99.0
margin_bottom = 69.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TierCrownPanel" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 19.0
margin_right = 74.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="TierCrown" type="TextureRect" parent="MarginContainer/VBoxContainer/TierCrownPanel"]
margin_right = 55.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 7 )

[node name="MarginerUpper" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 94.0
margin_bottom = 55.0
mouse_filter = 2
size_flags_vertical = 11
custom_constants/margin_top = 0
custom_constants/margin_bottom = 0

[node name="Upper" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginerUpper"]
margin_right = 94.0
margin_bottom = 41.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TowerAttrContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper"]
margin_right = 28.0
margin_bottom = 41.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 0

[node name="IngredientInfo" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer"]
margin_right = 28.0
margin_bottom = 17.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_top = 1
custom_constants/margin_left = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer/IngredientInfo"]
margin_left = 1.0
margin_top = 1.0
margin_right = 28.0
margin_bottom = 17.0
mouse_filter = 2

[node name="IngredientIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer/IngredientInfo/HBoxContainer"]
visible = false
margin_right = 8.0
margin_bottom = 16.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="ColorInfo2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer"]
margin_top = 17.0
margin_right = 28.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_vertical = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer/ColorInfo2"]
margin_right = 28.0
margin_bottom = 11.0
mouse_filter = 2

[node name="Color02Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer/ColorInfo2/HBoxContainer"]
margin_right = 8.0
margin_bottom = 11.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="Marginer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer/ColorInfo2/HBoxContainer"]
margin_left = 12.0
margin_right = 28.0
margin_bottom = 11.0
mouse_filter = 2
custom_constants/margin_top = 2

[node name="Color02Label" type="Label" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer/ColorInfo2/HBoxContainer/Marginer"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
text = "Temp"
valign = 1

[node name="ColorInfo1" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer"]
margin_top = 28.0
margin_right = 28.0
margin_bottom = 41.0
mouse_filter = 2
size_flags_vertical = 10
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer/ColorInfo1"]
margin_right = 28.0
margin_bottom = 11.0
mouse_filter = 2

[node name="Color01Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer/ColorInfo1/HBoxContainer"]
margin_right = 8.0
margin_bottom = 11.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="Marginer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer/ColorInfo1/HBoxContainer"]
margin_left = 12.0
margin_right = 28.0
margin_bottom = 11.0
mouse_filter = 2
custom_constants/margin_top = 2

[node name="Color01Label" type="Label" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/TowerAttrContainer/ColorInfo1/HBoxContainer/Marginer"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
text = "Temp"
valign = 1

[node name="Marginer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper"]
margin_left = 32.0
margin_right = 94.0
margin_bottom = 41.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 11
size_flags_vertical = 5

[node name="TowerImage" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginerUpper/Upper/Marginer"]
margin_left = 62.0
margin_top = 20.0
margin_right = 62.0
margin_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6
stretch_mode = 6

[node name="MarginerLower" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 94.0
margin_bottom = 69.0
mouse_filter = 2
size_flags_vertical = 9
custom_constants/margin_top = 2

[node name="Lower" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginerLower"]
margin_top = 2.0
margin_right = 94.0
margin_bottom = 14.0
mouse_filter = 2
custom_constants/separation = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TowerNameLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginerLower/Lower"]
margin_right = 40.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 2 )
text = "Nan"

[node name="TowerCostLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginerLower/Lower"]
margin_left = 42.0
margin_right = 83.0
margin_bottom = 12.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
custom_fonts/font = SubResource( 3 )
align = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginerLower/Lower"]
margin_left = 85.0
margin_top = 1.0
margin_right = 94.0
margin_bottom = 10.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 9 )

[node name="ShineContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 52.0
margin_top = 34.0
margin_right = 52.0
margin_bottom = 34.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="ShinePic" type="TextureRect" parent="MarginContainer/ShineContainer"]
visible = false
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 5 )

[connection signal="button_down" from="BuyCard" to="." method="_on_BuyCard_button_down"]
[connection signal="button_up" from="BuyCard" to="." method="_on_BuyCard_button_up"]
[connection signal="gui_input" from="BuyCard" to="." method="_on_BuyCard_gui_input"]
